<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, FirstActivity!</string>
    <string name="app_name">com.fring_37_3.8.1.6</string>
    <string name="firstActivityRules">Правила</string>
    <string name="firstActivityNext">Далее</string>
    <string name="firstActivityLoading">Загрузка...</string>
    <string name="rulesNextButtonText">Далее</string>
    <string name="rulesExitButtonText">Назад</string>
    <string name="rulesBasicText">Загрузка...</string>
    <string name="finishNextButtonText">Открыть</string>
    <string name="finishExitButtonText">Выход</string>
    <string name="finishBasicText">Загрузка...</string>
    <string name="questionBasicText">Загрузка...</string>
    <string name="questionYesButtonText">Да</string>
    <string name="questionNoButtonText">Нет</string>
    <string name="memberActivityExit">Выход</string>
    <string name="memberActivityOpen">Обновить</string>
</resources>
